<resources>
    <string name="app_name">ToMore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_camero">相机</string>
    <string name="main_duoliao">多聊</string>
    <string name="main_meg">杂志</string>
    <string name="main_bianli">便利</string>
    <string name="main_kabao">卡包</string>
    <string name="toolbox_item_backtomain">回主页</string>
    <string name="toolbox_item_reply">我的回复</string>
    <string name="toolbox_item_tiezi">我的帖子</string>
    <string name="toolbox_item_guanzhu">我的关注</string>
    <string name="toolbox_item_fensi">我的粉丝</string>
    <string name="toolbox_item_blacklist">黑名单</string>
    <string name="toolbox_item_aboutus">关于</string>
    <string name="toolbox_item_logout">退出</string>
       <string name="toolbox_item_login">登陆</string>
           <string name="bar_title_duoliao">多聊</string>
    <string name="bar_title_bt_duoliao">多聊</string>
    <string name="bar_title_bt_duoyao">多摇</string>
    <string name="bar_title_meg">杂志</string>
    <string name="bar_title_member">会员卡</string>
    <string name="bar_title_add">添加</string>
    <string name="bar_title_bianli">便利</string>
    <string name="bar_title_fans">粉丝</string>
    <string name="bar_title_following">关注</string>
    <string name="bar_title_blocked">黑名单</string>
    <string name="bar_title_threadDetails">帖子详情</string>
    <string name="wait">Wait...</string>
    <string name="dataload">Loading...</string>
    <string name="quit">Quit</string>
    <string name="confirm">Confirm</string>
    <string name="exit">Exit</string>
    <string name="tips">tips</string>
    <string name="sure">sure</string>
    <string name="loading">loading</string>
    <string name="network_failure">network_failure</string>
    <string name="cancel">Cancel</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="member_barcode">条形码</string>
    <string name="member_title">标题</string>
    <string name="member_tomore_card">多点卡</string>
    <string name="member_des">描述</string>
    <string name="bar_title_member_detail">我的卡片</string>
    <string name="bar_title_member_back">会员卡</string>
    <string name="member_barcode_hint">输入条形码</string>
    <string name="member_title_hint">输入卡片名字</string>
    <string name="member_des_hint">输入卡片描述</string>
    <string name="member_edit">编辑</string>
    <string name="member_submit">提交</string>
    <string name="member_generate_barcode">生成条形码</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="d">图片描述</string>
    <string name="login_email">邮箱/电话</string>
    <string name="login_password">密码</string>
    <string name="login_button">登陆</string>
    <string name="btn_forget_password">忘记密码？</string>
    <string name="find_password">找回密码</string>
    <string name="find_password_email">输入您注册邮箱</string>
    <string name="member_picture">Ta的图片：</string>
    <string name="submit">提交</string>
    <string name="register_email">邮箱，必填</string>
    <string name="register_user_name">用户名，必填</string>
    <string name="register_password_notice">注册后不可更改，3~20位字符，可包含英文、数字和“_”</string>
    <string name="register_password">密码，必填</string>
    <string name="register_confirm_password">确认密码，必填</string>
    <string name="register_school_notice">请填写您在读或毕业院校</string>
    <string name="register_school">学校</string>
    <string name="register_major_notice">您的相关专业</string>
    <string name="register_major">专业</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="agreement">隐私协议和服务条款</string>
    <string name="bar_title_member_add">添加卡片</string>
    <string name="login_title">登陆</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="mandarin">汉</string>
    <string name="cantonese">粤</string>
    <string name="english">英</string>
    <string name="servicelanuage">服务语言</string>
    <string name="contact">联系人</string>
    <string name="detailinfo">详细信息</string>
    <string name="addressinfo">地址信息</string>
    <string name="phone">电话</string>
    <string name="sent">发送</string>
    <string name="wholevideo">完整视频</string>
    <string name="sentMessage">发送短信</string>
    <string name="join">加盟</string>
    <string name="contactTo">联系人：</string>
    <string name="contactThrough">联系方式：</string>
    <string name="leaveMessage">留言：</string>
    <string name="leagueWelcomeMessage">赶快填写商家信息加入便利联盟吧！</string>
    <string name="successMessage">发送成功</string>
    <string name="commentList">评论列表</string>
    <string name="postComment">Post</string>
    <string name="commentPost">发表</string>
    <string name="maglist">杂志列表</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="Order">Order</string>
    <string name="RestaurantsList">餐馆列表</string>
    <string name="CustomMade">定制</string>
    <string name="TakePhoto">手机拍照</string>
    <string name="FromAlbum">手机相册</string>
    <string name="ChangeAvatar">更改头像</string>
    <string name="Likeinfo">赞了你的帖子</string>
     <string name="Commentinfo">你的帖子收到回复</string>
    <string name="PhoneCall">呼叫</string>
    <string name="Cancel">取消</string>
    <string name="Phone">电话</string>
    <string name="bar_title_generalBL_detail">信息详情</string>
    <string name="Mypost">我的帖子</string>
    <string name="MyReply">我的回复</string>
    <string name="tomoreWeb">http://www.tomoreapp.com/<a href="http://www.tomoreapp.com/"></a></string>
    <string name="CopyRight">版权 &#x00A9; Eastcoast Investing Group Inc. 保留所有权利</string>
    <string name="AboutUsVersion">关于：Version 1.10</string>
    <string name="GetPhoto">您想通过什么方式获得图片</string>
    <string name="failtosend">发送失败</string>
    <string name="Deletedsuccessfully">成功删除</string>
    <string name="FailToDelete">删除失败</string>
    <string name="MustLogin">您必须先登录才能发送帖子</string>
    <string translatable="false" name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
	<string translatable="false" name="pull_to_refresh_release_label">松开可以刷新</string>
	<string translatable="false" name="pull_to_refresh_refreshing_label">加载中…</string>
	<string translatable="false" name="pull_to_refresh_tap_label">点击刷新</string>
	<string translatable="false" name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
	<string translatable="false" name="umeng_socialize_comment">评论</string>
	<string translatable="false" name="umeng_socialize_comment_detail">评论详情</string>
	<string translatable="false" name="umeng_socialize_back">返回</string>
	<string translatable="false" name="umeng_socialize_near_At">最近\@的好友</string>
	<string translatable="false" name="umeng_socialize_friends">关注的好友</string>
	<string translatable="false" name="umeng_socialize_send">发布</string>
	<string translatable="false" name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
	<string translatable="false" name="umeng_socialize_tip_loginfailed">登录失败…</string>
	<string translatable="false" name="umeng_socialize_msg_sec">秒前</string>
	<string translatable="false" name="umeng_socialize_msg_min">分钟前</string>
	<string translatable="false" name="umeng_socialize_msg_hor">小时前</string>
	<string translatable="false" name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
	<string translatable="false" name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
	<string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
	<string name="umeng_socialize_login_qq">QQ空间</string>
	<string name="umeng_socialize_login">登录</string>
	<string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
	<string name="umeng_socialize_text_authorize">授权</string>
	<string name="umeng_socialize_text_unauthorize">未授权</string>
	<string name="umeng_socialize_text_ucenter">个人中心</string>
	<string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
	<string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
	<string name="umeng_socialize_text_friend_list">好友列表</string>
	<string name="umeng_socialize_text_visitor">游客</string>
	<string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
	<string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
	<string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
	<string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
	<string name="umeng_socialize_text_waitting">请稍候...</string>
	<string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
	<string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
	<string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
	<string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
	<string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
	<string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
	<string name="umeng_socialize_text_waitting_redirect">跳转</string>
	<string name="umeng_socialize_text_waitting_message">,请稍候...</string>
	<string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
	<string name="umeng_socialize_text_tencent_key">腾讯微博</string>
	<string name="umeng_socialize_text_sina_key">微博</string>
	<string name="umeng_socialize_text_qq_key">QQ</string>
	<string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
	<string name="umeng_socialize_text_renren_key">人人网</string>
	<string name="umeng_socialize_text_douban_key">豆瓣网</string>
	<string name="umeng_socialize_text_weixin_key">微信</string>
	<string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
	<string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
	<string name="umeng_example_home_btn_plus">社交分享</string>
	<string name="umeng_socialize_text_waitting_share">分享中…</string>
	<string name="umeng_socialize_content_hint">说点啥…</string>
	<string name="umeng_socialize_cancel_btn_str">取消</string>
	<string name="umeng_socialize_send_btn_str">发送</string>
	<string name="umeng_socialize_img_des"/>
	<string name="umeng_socialize_share">分享</string>
	<string name="com_facebook_loading">Loading...</string>
    <string name="nodatastring">没有数据</string>
    <string name="inputcomment">请输入评论</string>
    <string name="postcomment">发表</string>
</resources>