<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color" >

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/black" >

        <TextView
            android:id="@+id/tvTitleName"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="25sp"
            android:textColor="@color/grey"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/find_password" />

        <Button
            android:id="@+id/btnTitleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/grey"
            android:background="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:text="@string/login_button" 
            android:onClick="onBackLoginClick"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:src="@drawable/tomorelogo" />
    
    <EditText
        android:id="@+id/etFindPasswordEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/find_password_email" >

        <requestFocus/>
    </EditText> 
    
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/etFindPasswordEmail"
        android:layout_alignRight="@+id/etFindPasswordEmail"
        android:layout_below="@+id/etFindPasswordEmail"
        android:layout_marginTop="50dp"
        android:background="@color/login_button_color"
        android:onClick="onFindPasswordClick"
        android:text="@string/login_button"
        android:textSize="20sp" />
   
</RelativeLayout>